# oxibridge

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  config.example.yml  config.test.yml  deny.toml  flake.nix
minicord/: Cargo.toml
minicord/examples/: me.rs  websocket.rs
minicord/src/: gateway.rs  lib.rs
minicord/src/types/: mod.rs  snowflake.rs  user.rs  webhook.rs
minicord/src/types/gateway/: codes.rs  mod.rs  opcodes.rs
minicord/src/types/gateway/events/: mod.rs  ready.rs
minicord/src/types/gateway/opcodes/: hello.rs  identify.rs  mod.rs
minicord/src/types/http/: mod.rs
nix/: config-test.yml  module.nix  package.nix  src.txt  test.nix
oxibridge/: Cargo.toml
oxibridge/src/: config.rs  core.rs  main.rs  storage.rs  tasks.rs
oxibridge/src/backends/: file.rs  mod.rs
oxibridge/src/backends/telegram/: mod.rs
oxibridge/src/discord/: broadcast.rs  mod.rs  parsers.rs
oxibridge/src/telegram/: entities.rs  unparse.rs
src/: broadcast.rs  config.rs  core.rs  main.rs  storage.rs
src/backends/: file.rs  mod.rs
src/discord/: broadcast.rs  events.rs  mod.rs  parsers.rs  refresh.rs
src/telegram/: broadcast.rs  entities.rs  events.rs  mod.rs  parsers.rs
