[package]
name = "oxibridge"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
