[package]
name = "oxibridge"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tempfile = "0.6.0"
color-eyre = "0.6.3"
markdown = "1.0.0-alpha.21"
rust-s3 = "0.35.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
serenity = "0.12.4"
sha256 = "1.5.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

disallowed-macros = "deny"
excessive-nesting = "warn"

arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
expect_used = "warn"
unwrap_used = "warn"
