[package]
name = "minicord"
version = "0.1.0"
edition = "2024"
description = "A small Discord API wrapper for Oxibridge"
license = "GPL-3.0-or-later"
repository = "https://github.com/itsvic-dev/oxibridge"
readme = "README.md"
keywords = ["discord"]
categories = ["api-bindings"]

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
log = "0.4.28"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "rustls-tls",
  "json",
] }
reqwest-websocket = "0.5.1"
secure-string = "0.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
