[package]
name = "oxibridge"
version = "0.1.0"
edition = "2021"
description = "A bridge between messaging platforms"
repository = "https://github.com/itsvic-dev/oxibridge"
license = "GPL-3.0-or-later"
readme = "../README.md"
keywords = ["discord", "telegram", "bridge"]
categories = ["command-line-utilities"]

[dependencies]
async-tempfile = "0.7.0"
async-trait = "0.1.89"
color-eyre = { version = "0.6.5", default-features = false }
futures = "0.3.31"
log = "0.4.28"
markdown = "1.0.0-alpha.21"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "rustls-tls",
  "stream",
  "json",
] }
rust-s3 = { version = "0.37.0", default-features = false, features = [
  "tokio-rustls-tls",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha256 = "1.5.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
minicord = { path = "../minicord" }
env_logger = "0.11.8"

[lints]
workspace = true
